--- a/index.html
+++ b/index.html
@@ -89,13 +89,11 @@
          <h1>PRODUCT</h1>
           <div class="row">
             <div class="col-sm-4">
-                <div class="productbox"></div>
+                <div class="mousebox">
                 <div class="background-black">
                     <p class="mouse-effect">learn more</p>
-            
-                
                 </div>
-              <img src="img/product1.jpeg"><p>stripe colorful shirt</p></div>
+                    <img src="img/product1.jpeg"><p>stripe colorful shirt</p></div></div>
             <div class="col-sm-4">
               <img src="img/product2.jpeg"><p>stripe shirt</p></div>
             <div class="col-sm-4"><img src="img/product3.jpeg"><p>check shirt</p></div>
